--- a/SparkValueDesktopApplication/App.xaml
+++ b/SparkValueDesktopApplication/App.xaml
@@ -4,6 +4,13 @@
              xmlns:local="clr-namespace:SparkValueDesktopApplication"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="Button">
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="Padding" Value="5 2"/>
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Padding" Value="2"/>
+        </Style>
     </Application.Resources>
 </Application>
