--- a/SparkValueDesktopApplication/Views/SignInView.xaml
+++ b/SparkValueDesktopApplication/Views/SignInView.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SparkValueDesktopApplication.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Border Margin="20" BorderBrush="Black" BorderThickness="2" CornerRadius="25" Background="LightSlateGray">
+             d:DesignHeight="500" d:DesignWidth="850">
+    <Border Margin="10" MinWidth="550" BorderBrush="Black" BorderThickness="2" CornerRadius="25" Background="LightSlateGray">
         <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="40">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
