--- a/SparkValueDesktopApplication/Views/SignInView.xaml
+++ b/SparkValueDesktopApplication/Views/SignInView.xaml
@@ -22,10 +22,10 @@
             <Border Grid.Row="1" Grid.Column="0" BorderBrush="Black" BorderThickness="1">
                 <StackPanel  VerticalAlignment="Center" Margin="10">
                     <TextBlock HorizontalAlignment="Center" Text="New to Spark Value?"/>
-                    <Button Content="Create a free account here" Margin="10 0 10 10" />
+                    <Button Content="Create a free account here" Command="{Binding CreateAccountCommand}" Margin="10 0 10 10" />
                     <Separator  Margin="0 5"/>
                     <TextBlock HorizontalAlignment="Center" Text="Not interested in our lessons?"/>
-                    <Button Content="Try our virtual breadboard here" Margin="10 0 10 10"/>
+                    <Button Content="Try our virtual breadboard here" Command="{Binding BreadboardNavigateCommand}" Margin="10 0 10 10"/>
                 </StackPanel>
             </Border>
 
@@ -33,7 +33,7 @@
                 <StackPanel VerticalAlignment="Center" Margin="10">
                     <StackPanel Orientation="Horizontal" Margin="5">
                         <TextBlock Text="Username:"/>
-                        <TextBox MinWidth="150" MaxWidth="150"/>
+                        <TextBox Text="{Binding Username}" MinWidth="150" MaxWidth="150"/>
                     </StackPanel>
                     <TextBlock HorizontalAlignment="Right" FontSize="12" Margin="5 5 5 1">
                         <Hyperlink Command="">
@@ -42,9 +42,9 @@
                     </TextBlock>
                     <StackPanel Orientation="Horizontal" Margin="5 0 5 5">
                         <TextBlock Text="Password:"/>
-                        <PasswordBox MinWidth="150" MaxWidth="150"/>
+                        <PasswordBox TextInput="{Binding Password}" MinWidth="150" MaxWidth="150"/>
                     </StackPanel>
-                    <Button Content="Sign in" MaxWidth="80" MinWidth="60"/>
+                    <Button Content="Sign in" Command="{Binding SignInCommand}" MaxWidth="80" MinWidth="60"/>
                 </StackPanel>
             </Border>
             
