--- a/SparkValueDesktopApplication/Views/DashboardView.xaml
+++ b/SparkValueDesktopApplication/Views/DashboardView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SparkValueDesktopApplication.Views.MainUserView"
+﻿<UserControl x:Class="SparkValueDesktopApplication.Views.DashboardView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -22,8 +22,8 @@
             <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="Spark Value"/>
             
             <StackPanel Grid.Column="2" Orientation="Horizontal">
-                <TextBlock VerticalAlignment="Center" Text="Username"/>
-                <Button Command="" Background="White" BorderThickness="0.1">
+                <TextBlock VerticalAlignment="Center" Text="{Binding Username}"/>
+                <Button Command="{Binding SettingsNavigateCommand}" Background="White" BorderThickness="0.1">
                     <Image Source="/Images/SettingsGear.png" Width="25"/>
                 </Button>
             </StackPanel>
@@ -32,16 +32,21 @@
         <DockPanel Grid.Row="1">
             
             <Border DockPanel.Dock="Left" Background="LightSlateGray" MaxWidth="200">
-                <StackPanel MinWidth="150">
-                    <Button Content="Virtual Breadboard" Command=""/>
-                </StackPanel>
+                <DockPanel LastChildFill="False" MinWidth="150">
+                    <StackPanel DockPanel.Dock="Top" >
+                        <Button Content="Virtual Breadboard" Command="{Binding BreadboardNavigateCommand}"/>
+                    </StackPanel>
+                    <TextBlock DockPanel.Dock="Bottom" HorizontalAlignment="Center">
+                        <Hyperlink Command="{Binding LogOutCommand}">
+                            Log Out
+                        </Hyperlink>
+                    </TextBlock>
+                </DockPanel>
+                
             </Border>
 
             <ScrollViewer DockPanel.Dock="Right" MinWidth="350">
-                <ItemsControl >
-                    <ListItem/>
-                    <ListItem/>
-                    <ListItem/>
+                <ItemsControl ItemsSource="{Binding Units}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <StackPanel IsItemsHost="True">
@@ -52,12 +57,10 @@
                         <DataTemplate>
                             <Border Background="LightSlateGray">
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="Unit Something"/>
+                                    <TextBlock Text="{Binding Title}"/>
                                     
                                     <Expander>
-                                        <ItemsControl>
-                                            <ListItem/>
-                                            <ListItem/>
+                                        <ItemsControl ItemsSource="{Binding Lessons}">
                                             <ItemsControl.ItemsPanel>
                                                 <ItemsPanelTemplate>
                                                     <StackPanel IsItemsHost="True">
@@ -67,8 +70,8 @@
                                             <ItemsControl.ItemTemplate>
                                                 <DataTemplate>
                                                     <StackPanel Orientation="Horizontal">
-                                                        <TextBlock Text="Lesson Something"/>
-                                                        <Button Content="Go to lesson" Command=""/>
+                                                        <TextBlock Text="{Binding Title}"/>
+                                                        <Button Content="Go to lesson" Command="{Binding LessonNavigateCommand}"/>
                                                     </StackPanel>
                                                 </DataTemplate>
                                             </ItemsControl.ItemTemplate>
