--- a/SparkValueDesktopApplication/Views/SignInView.xaml
+++ b/SparkValueDesktopApplication/Views/SignInView.xaml
@@ -36,7 +36,7 @@
                         <TextBox Text="{Binding Username}" MinWidth="150" MaxWidth="150"/>
                     </StackPanel>
                     <TextBlock HorizontalAlignment="Right" FontSize="12" Margin="5 5 5 1">
-                        <Hyperlink Command="">
+                        <Hyperlink Command="{Binding ForgotPasswordNavigateCommand}">
                             Forgot your password?
                         </Hyperlink>
                     </TextBlock>
