--- a/SparkValueDesktopApplication/Views/PasswordChangeView.xaml
+++ b/SparkValueDesktopApplication/Views/PasswordChangeView.xaml
@@ -19,7 +19,7 @@
                 <StackPanel VerticalAlignment="Center" Margin="10">
                     <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="5">
                         <TextBlock Text="New Password:"/>
-                        <PasswordBox TextInput="{Binding Password}" MinWidth="150" MaxWidth="150"/>
+                        <PasswordBox x:Name="PasswordEntry" MinWidth="150" MaxWidth="150"/>
                     </StackPanel>
 
                     <Grid VerticalAlignment="Bottom" HorizontalAlignment="Right">
@@ -29,7 +29,7 @@
                             <ColumnDefinition Width="auto"/>
                         </Grid.ColumnDefinitions>
                         <Button Grid.Column="0" Content="Cancel" Command="{Binding CancelCommand}"/>
-                        <Button Grid.Column="2" Content="Reset Password" Command="{Binding ResetPasswordCommand}"/>
+                        <Button Grid.Column="2" Content="Reset Password" Command="{Binding ResetPasswordCommand}" CommandParameter="{Binding ElementName=PasswordEntry}"/>
                     </Grid>
                 </StackPanel>
             </Border>
