--- a/SparkValueDesktopApplication/App.xaml
+++ b/SparkValueDesktopApplication/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="SparkValueDesktopApplication.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SparkValueDesktopApplication"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:SparkValueDesktopApplication">
     <Application.Resources>
         <Style TargetType="Button">
             <Setter Property="Margin" Value="10"/>
