--- a/SparkValueDesktopApplication/MainWindow.xaml
+++ b/SparkValueDesktopApplication/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SparkValueDesktopApplication"
+        xmlns:vms="clr-namespace:SparkValueDesktopApplication.ViewModels"
         xmlns:views="clr-namespace:SparkValueDesktopApplication.Views"
         mc:Ignorable="d"
         ResizeMode="CanResize"
@@ -11,8 +12,34 @@
         FontSize="15"
         Title="Spark Value" Height="500" Width="850">
     <Viewbox MaxHeight="725" MaxWidth="1232.5">
+        <Viewbox.Resources>
+            <DataTemplate DataType="{x:Type vms:BreadboardViewModel}">
+                <views:BreadboardView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type vms:DashboardViewModel}">
+                <views:DashboardView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type vms:ResetEmailAddressViewModel}">
+                <views:EmailChangeView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type vms:LessonViewModel}">
+                <views:LessonView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type vms:NewAccountViewModel}">
+                <views:NewAccountView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type vms:ResetPasswordViewModel}">
+                <views:PasswordChangeView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type vms:SignInViewModel}">
+                <views:SignInView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type vms:ResetUsernameViewModel}">
+                <views:UsernameChangeView/>
+            </DataTemplate>
+        </Viewbox.Resources>
         <Border BorderBrush="Black" BorderThickness="0.25">
-            <views:BreadboardView/>
+            <ContentControl Content="{Binding CurrentViewModel}"/>
         </Border>
     </Viewbox>
 </Window>
