--- a/SparkValueDesktopApplication/MainWindow.xaml
+++ b/SparkValueDesktopApplication/MainWindow.xaml
@@ -14,7 +14,7 @@
     <Viewbox MaxHeight="725" MaxWidth="1232.5">
         <Viewbox.Resources>
             <DataTemplate DataType="{x:Type vms:BreadboardViewModel}">
-                <views:BreadboardView/>
+                <views:BreadboardView ComponentPlaceCommand="{Binding ComponentPlaceCommand}"/>
             </DataTemplate>
             <DataTemplate DataType="{x:Type vms:DashboardViewModel}">
                 <views:DashboardView/>
