--- a/SparkValueDesktopApplication/Views/BreadboardView.xaml
+++ b/SparkValueDesktopApplication/Views/BreadboardView.xaml
@@ -70,7 +70,17 @@
                     Background="LightGoldenrodYellow" 
                     AllowDrop="True" Drop="breadboard_Drop" DragOver="breadboard_DragOver"
                     MouseDown="breadboard_MouseDown" MouseMove="breadboard_MouseMove" MouseUp="breadboard_MouseUp">
-
+                    <Polygon Points="5,0 10,0 10,5 15,5 15,10 10,10 10,15 5,15 5,10 0,10 0,5 5,5" Fill="White" Canvas.Left="2.5" Canvas.Top="2.5" Panel.ZIndex="1"/>
+                    <Ellipse Width="19" Height="19" Canvas.Left="0.5" Fill="Red"/>
+                    <Border x:Name="positiveBorder" Margin="20 0 0 0" BorderBrush="Red" BorderThickness="2">
+                        <Rectangle x:Name="positiveRail" Width="525" Height="15" Fill="White"/>
+                    </Border>
+                    <Rectangle Width="15" Height="5" Fill="White" Panel.ZIndex="1" Canvas.Left="2.5" Canvas.Top="27.5"/>
+                    <Ellipse Width="19" Height="19" Canvas.Left="0.5" Fill="Blue" Canvas.Top="20"/>
+                    <Border x:Name="negativeBorder" Margin="20 20 0 0" BorderBrush="Blue" BorderThickness="2">
+                        <Rectangle x:Name="negativeRail" Width="525" Height="15" Fill="White"/>
+                    </Border>
+                    <Rectangle Fill="Black" Canvas.Top="40" Width="550" Height="1"/>
                 </Canvas>
 
                 <Grid VerticalAlignment="Bottom" HorizontalAlignment="Stretch">
