--- a/SparkValueDesktopApplication/Views/BreadboardView.xaml
+++ b/SparkValueDesktopApplication/Views/BreadboardView.xaml
@@ -85,7 +85,7 @@
                     Margin="20" 
                     Width="550" Height="200" 
                     Background="LightGoldenrodYellow" 
-                    AllowDrop="True" Drop="breadboard_Drop" DragOver="breadboard_DragOver"
+                    AllowDrop="True" Drop="breadboard_Drop" DragOver="breadboard_DragOver" DragLeave="canvas_DragLeave"
                     MouseDown="breadboard_MouseDown" MouseMove="breadboard_MouseMove" MouseUp="breadboard_MouseUp">
                     <Polygon Points="5,0 10,0 10,5 15,5 15,10 10,10 10,15 5,15 5,10 0,10 0,5 5,5" Fill="White" Canvas.Left="2.5" Canvas.Top="2.5" Panel.ZIndex="1"/>
                     <Ellipse Width="19" Height="19" Canvas.Left="0.5" Fill="Red"/>
@@ -114,6 +114,19 @@
                             <CheckBox Margin="10 0 0 0" Padding="5" VerticalContentAlignment="Center" FontSize="12" Content="Component Values" Command="{Binding FilterValuesCommand}"/>
                         </StackPanel>
                     </Border>
+
+                    <Canvas 
+                        x:Name="trashCan" 
+                        Height="30" 
+                        VerticalAlignment="Bottom" 
+                        Grid.Column="1" 
+                        Background="PaleVioletRed"
+                        AllowDrop="True" Drop="trashCan_Drop" DragOver="trashCan_DragOver" DragLeave="canvas_DragLeave">
+                        <TextBlock 
+                            Margin="5"
+                            Width="{Binding Path=ActualWidth, RelativeSource={RelativeSource AncestorType=Canvas}}" TextAlignment="Center"
+                            Text="Delete Component" Foreground="White"/>
+                    </Canvas>
 
                     <Border Grid.Column="2" Background="LightSlateGray" MinWidth="250">
                         <Border.Visibility>
